--- a/bedrock/firefox/templates/firefox/feedback/unhappy.html
+++ b/bedrock/firefox/templates/firefox/feedback/unhappy.html
@@ -36,7 +36,7 @@
     {% if LANG == 'en-US' and donate_stars_url %}
       <p class="copy">{{ _('Mozilla, the non-profit behind Firefox, relies on donations. Would you like to make a donation to help us carry out our mission to keep the Web open and free?') }}</p>
 
-      <p class="copy"><a href="{{ donate_stars_url }}" class="button-flat" rel="external">{{ _('Donate Now') }}</a></p>
+      <p class="copy"><a href="{{ donate_stars_url }}" class="button" rel="external">{{ _('Donate Now') }}</a></p>
     {% endif %}
 
     <ul class="support-links">
@@ -56,7 +56,7 @@
   <div class="secondary">
     <h2>{{ _('How can we make Firefox better?') }}</h2>
     <p>{{ _('Share your suggestions and we’ll use them to improve Firefox.') }}</p>
-    <p class="main-cta"><a rel="external" href="https://support.mozilla.org/questions/new/desktop" class="button-flat">{{ _('Tell us more') }}</a></p>
+    <p class="main-cta"><a rel="external" href="https://support.mozilla.org/questions/new/desktop" class="button">{{ _('Tell us more') }}</a></p>
   </div>
 
 </main>
