--- a/bedrock/firefox/templates/firefox/firstrun/learnmore/yahoo-search.html
+++ b/bedrock/firefox/templates/firefox/firstrun/learnmore/yahoo-search.html
@@ -61,7 +61,7 @@
   {% endif %}
   <p>{{ _('Yahoo Search on Firefox gives you videos and images at the top of your results, so you can see what you want most, first.') }}</p>
   <div class="cta">
-    <button id="try-it" role="button" class="button-flat-dark hidden">{{ _('Try it now') }}</button>
+    <button id="try-it" role="button" class="button dark hidden">{{ _('Try it now') }}</button>
     <p class="pointer hidden">{{ _('Your search is ready!') }}</p>
   </div>
   <figure class="ravioli">
