--- a/bedrock/firefox/templates/firefox/new/redesign/scene2.html
+++ b/bedrock/firefox/templates/firefox/new/redesign/scene2.html
@@ -28,7 +28,7 @@
           <h1>{{ _('Thanks for joining the mission.') }}</h1>
 
           <div class="download-button-wrapper desktop" id="download-button-wrapper-desktop">
-            {{ download_firefox(force_direct=true, simple=true, dom_id='primary-download-button') }}
+            {{ download_firefox(force_direct=true, dom_id='primary-download-button') }}
           </div>
 
           <p class="help">
