--- a/bedrock/firefox/templates/firefox/os/index.html
+++ b/bedrock/firefox/templates/firefox/os/index.html
@@ -59,7 +59,7 @@
           <h1>{{ _('Experience Firefox OS on your Android device')}}</h1>
           <p>{{_('Introducing Firefox OS 2.5 Developer Preview, an experimental app that lets you use Firefox OS on your Android device.')}}</p>
           <div class="primary-cta">
-            <a href="{{ settings.B2G_DROID_URL }}" class="cta-button" data-pixel="52161" data-id="Mozilla_B2G_Activity_Tag_1">{{_('Get the Android App')}}</a>
+            <a href="{{ settings.B2G_DROID_URL }}" class="cta-button button green" data-pixel="52161" data-id="Mozilla_B2G_Activity_Tag_1">{{_('Get the Android App')}}</a>
           </div>
         </div>
         <div class="hero-image">
@@ -116,7 +116,7 @@
       <div class="content-wrapper">
         <h2>{{_('Ready to try Firefox OS 2.5 Developer Preview on your Android device?')}}</h2>
         <div class="primary-cta">
-          <a href="{{ settings.B2G_DROID_URL }}" class="cta-button" data-pixel="52162" data-id="Mozilla_B2G_Activity_Tag_2">{{_('Get the Android App')}}</a>
+          <a href="{{ settings.B2G_DROID_URL }}" class="cta-button button green" data-pixel="52162" data-id="Mozilla_B2G_Activity_Tag_2">{{_('Get the Android App')}}</a>
           <p>{{_('Want the full Firefox OS 2.5 experience?')}} <a href="https://firefoxos.mozilla.community/devices/" class="more" rel="external">{{_('Flash your phone')}}</a></p>
         </div>
       </div>
