--- a/bedrock/firefox/templates/firefox/tracking-protection-tour.html
+++ b/bedrock/firefox/templates/firefox/tracking-protection-tour.html
@@ -108,7 +108,7 @@ data-panel3-button="{{ _('Got it!') }}"
         <h2>{{ _('Thanks for learning about the new Private Browsing with Tracking Protection.') }}</h2>
       {% endif %}
       <p>{{ _('Learn more about how it works by visiting the <a rel="external" href="%s">FAQ page</a>.')|format('https://support.mozilla.org/kb/tracking-protection-pbm') }}</p>
-      <button id="reload-btn" type="button" class="button-flat">{{ _('Restart tour') }}</button>
+      <button id="reload-btn" type="button" class="button">{{ _('Restart tour') }}</button>
     </section>
   </div>
 
