--- a/bedrock/firefox/templates/firefox/win10-welcome.html
+++ b/bedrock/firefox/templates/firefox/win10-welcome.html
@@ -49,7 +49,7 @@
   </header>
   <section class="firefox-default-cta hidden">
     {% if l10n_has_tag('win10_button_update') %}
-      <button id="set-default" type="button" class="button-flat-dark" data-button-name="Let's do it">{{ _('Let’s do it') }}</button>
+      <button id="set-default" type="button" class="button dark" data-button-name="Let's do it">{{ _('Let’s do it') }}</button>
     {% endif %}
     <h2>{{ _('Make Firefox your default in 3 easy steps:') }}</h2>
     <ol>
@@ -62,7 +62,7 @@
       <li>{{ _('Choose Firefox') }}</li>
     </ol>
     {% if not l10n_has_tag('win10_button_update') %}
-      <button id="set-default" type="button" class="button-flat-dark">{{ _('Let’s do it') }}</button>
+      <button id="set-default" type="button" class="button dark">{{ _('Let’s do it') }}</button>
     {% endif %}
   </section>
   <section class="firefox-learn-links">
