--- a/bedrock/mozorg/templates/mozorg/contribute/contribute-tasks.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/contribute-tasks.html
@@ -174,7 +174,7 @@
 
   <section class="section inquiry">
     <div class="container center">
-      <a href="{{ url('mozorg.contribute.taskssurvey') }}" class="button-flat">{{ _('Not ready to try a task?') }} »</a>
+      <a href="{{ url('mozorg.contribute.taskssurvey') }}" class="button">{{ _('Not ready to try a task?') }} »</a>
     </div>
   </section>
 {% endblock contrib_content %}
