--- a/bedrock/mozorg/templates/mozorg/contribute/events.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/events.html
@@ -72,7 +72,7 @@
           </p>
 
           <p class="form-submit">
-            <button type="button" class="button-flat">{{ _('Find events') }}</button>
+            <button type="button" class="button">{{ _('Find events') }}</button>
           </p>
         </fieldset>
       </form>
