--- a/bedrock/mozorg/templates/mozorg/plugincheck.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck.html
@@ -112,7 +112,7 @@
       <div class="version-message-container">
         <h2>{{_('Looks like you’re using an older version of Firefox.')}}</h2>
         <div class="desktop download-button-wrapper">
-          {{ download_firefox(check_old_fx=true) }}
+          {{ download_firefox() }}
         </div>
       </div>
 
