--- a/bedrock/thunderbird/templates/thunderbird/channel.html
+++ b/bedrock/thunderbird/templates/thunderbird/channel.html
@@ -31,7 +31,7 @@
             <li>{{ _('Provide feedback on features and performance to help determine what makes the final release') }}</li>
           </ul>
         </header>
-        <div class="download-box">{{ download_thunderbird('alpha', small=True, force_direct=True) }}</div>
+        <div class="download-box">{{ download_thunderbird('alpha', force_direct=True) }}</div>
       </section>
       <section id="thunderbird-beta">
         <header>
@@ -43,7 +43,7 @@
             <li>{{ _('Provide feedback to help refine and polish what will be in the final release') }}</li>
           </ul>
         </header>
-        <div class="download-box">{{ download_thunderbird('beta', small=True, force_direct=True) }}</div>
+        <div class="download-box">{{ download_thunderbird('beta', force_direct=True) }}</div>
       </section>
     </div>
   </main>
