--- a/bedrock/thunderbird/templates/thunderbird/index.html
+++ b/bedrock/thunderbird/templates/thunderbird/index.html
@@ -27,7 +27,7 @@
       <h1 class="large">{{ self.page_title() }}</h1>
       <p class="large">{{ self.page_desc() }}</p>
       <div class="download-button-wrapper">
-        {{ download_thunderbird(force_direct=true, simple=true) }}
+        {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download')) }}
       </div>
     </div>
   </div>
