--- a/media/css/base/simple_footer-resp.less
+++ b/media/css/base/simple_footer-resp.less
@@ -3,7 +3,8 @@
 /* Mobile layout: 320px */
 @media only screen and (max-width: @breakTablet) {
     #colophon {
-        .primary {
+        .primary,
+        .fx-footer-links {
             text-align: left;
             li {
                 display: block;
