--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -584,11 +584,9 @@ html[dir="rtl"] #phone-wrapper figure {
 }
 
 // Send to Device Widget
-#send-to-device {
-    display: none;
-}
-
-.send-to {
+#send-to-device,
+#send-to-button-header,
+#send-to-button-footer {
     display: none;
 }
 
@@ -707,7 +705,9 @@ html[dir="rtl"] #phone-wrapper figure {
     .dl-button {
         display: none;
     }
-    .send-to {
+    
+    #send-to-button-header,
+    #send-to-button-footer {
         display: block;
     }
 }
