--- a/media/css/firefox/australis/fx36/common.less
+++ b/media/css/firefox/australis/fx36/common.less
@@ -250,6 +250,7 @@ header[role="banner"],
     .font-size(@smallFontSize);
     text-align: center;
     font-style: italic;
+    margin-top: @baseLine;
 
     img {
         vertical-align: middle;
