--- a/media/css/firefox/channel.less
+++ b/media/css/firefox/channel.less
@@ -143,22 +143,6 @@
     .inline-block;
     margin: 0 (@gridGutterWidth / 2);
     text-align: left;
-
-    .fx-privacy-link {
-        a:link,
-        a:visited {
-            color: #333;
-        }
-    }
-}
-
-#page-developer {
-    .fx-privacy-link {
-        a:link,
-        a:visited {
-            color: #fff;
-        }
-    }
 }
 
 p.more {
@@ -182,6 +166,13 @@ p.more a:after {
 
 .info {
     margin: @baseLine auto;
+}
+
+.blueprint {
+    .warning,
+    .info {
+        color: #fff;
+    }
 }
 
 .space {
