--- a/media/css/firefox/desktop/index.less
+++ b/media/css/firefox/desktop/index.less
@@ -45,7 +45,7 @@
     .fx-privacy-link {
         a:link,
         a:visited {
-            color: #333;
+            color: @linkBlue
         }
     }
 }
@@ -57,14 +57,6 @@
 
 #sticky-download-desktop {
     display: none;
-
-    .download-link {
-        width: 160px;
-
-        .download-content {
-            padding: 4px 10px;
-        }
-    }
 }
 
 // up to date message
