--- a/media/css/firefox/hello/index.less
+++ b/media/css/firefox/hello/index.less
@@ -211,6 +211,9 @@ a.try-hello-button:visited {
             text-decoration: underline;
         }
     }
+    .download-heading {
+        color: #fff;
+    }
 }
 
 #try-hello {
