--- a/media/css/firefox/new/redesign/common.less
+++ b/media/css/firefox/new/redesign/common.less
@@ -25,7 +25,7 @@
 .inner-container,
 .launch-area,
 #benefits ul,
-.subscribe-container {
+#newsletter-subscribe > .container {
     width: @widthDesktop - (@baseLine * 2);
     margin: 0 auto;
 
@@ -143,13 +143,6 @@ main {
 
     p {
         color: #fff;
-    }
-
-    .privacy-notice {
-        display: inline-block;
-        margin-top: @baseLine;
-        .font-size(@largeFontSize);
-        font-style: italic;
     }
 }
 
