--- a/media/css/firefox/sync.less
+++ b/media/css/firefox/sync.less
@@ -47,6 +47,8 @@
 }
 
 .buttons {
+    text-align: center;
+
     .download-button,
     .button {
         display: block;
@@ -321,20 +323,9 @@
     display: block;
 }
 
-.js .show-not-fx .download-button {
-    ul {
-        width: 250px;
-        margin: 0 auto 10px;
-    }
-}
-
-.show-not-fx {
-    .fx-privacy-link {
-        a:link,
-        a:visited {
-            color: #333;
-        }
-    }
+.js .show-not-fx .download-button ul {
+    width: 250px;
+    margin: 0 auto 10px;
 }
 
 .state-fx-android {
