--- a/media/css/firefox/win10-welcome.less
+++ b/media/css/firefox/win10-welcome.less
@@ -197,17 +197,10 @@ main {
     }
 }
 
-.button-flat-dark {
-    .fira-sans-light;
+.button.dark {
     .font-size(22px);
     .trailing-arrow();
-    .transition(background .2s ease-in-out);
-}
-
-html[lang^='en'] {
-    .button-flat-dark {
-        text-transform: none;
-    }
+    margin-bottom: @baseLine;
 }
 
 footer[role="contentinfo"] {
@@ -303,7 +296,7 @@ footer[role="contentinfo"] {
         }
     }
 
-    .button-flat-dark {
+    .button.dark {
         .font-size(20px);
     }
 
@@ -411,7 +404,7 @@ footer[role="contentinfo"] {
         }
     }
 
-    .button-flat-dark {
+    .button.dark {
         .font-size(18px);
     }
 }
