--- a/media/css/mozorg/home/home.less
+++ b/media/css/mozorg/home/home.less
@@ -164,6 +164,10 @@ h1, h2, h3, h4, h5, h6 {
     .download-button {
         float: right;
         margin: (@baseLine * 1.5) 0 @baseLine 0;
+
+        .unsupported-download {
+            text-align: center;
+        }
     }
 }
 
