--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -1,7 +1,7 @@
 @import "lib.less";
 @import "reset.less";
 @import "fonts.less";
-@import "buttons-new.less";
+@import "buttons.less";
 @import "animations.less";
 
 /* {{{ Basic Colors, Text, Links */
