--- a/media/css/styleguide/websites-sandstone.less
+++ b/media/css/styleguide/websites-sandstone.less
@@ -144,11 +144,10 @@
 
     #buttons-static,
     #buttons {
+        th,
         td {
-            text-align: right;
-            div {
-                text-align: left;
-            }
+            text-align: left;
+            padding-bottom: @baseLine;
         }
         clear: both;
         .clearfix;
