--- a/media/css/thunderbird/landing.less
+++ b/media/css/thunderbird/landing.less
@@ -56,7 +56,8 @@
 
 .download-button-wrapper {
     margin: 50px auto 0;
-    width: 240px;
+    width: 260px;
+    text-align: center;
 
     .unsupported-download,
     .linux-arm-download {
