--- a/bedrock/firefox/templates/firefox/australis/fx36/tour.html
+++ b/bedrock/firefox/templates/firefox/australis/fx36/tour.html
@@ -81,7 +81,7 @@ data-step4="{{ _('4/4') }}"
       <div class="promo-copy">
         <h2>{{ _('Get to know Hello') }}</h2>
         <p>{{ _('Firefox Hello is the easiest way to connect with friends and family for free over video.') }}</p>
-        <a id="learn-more" href="{{ url('firefox.hello') }}" class="button-flat" data-link-type="button" data-link-name="Learn more">{{ _('Learn more') }}</a>
+        <a id="learn-more" href="{{ url('firefox.hello') }}" class="button" data-link-type="button" data-link-name="Learn more">{{ _('Learn more') }}</a>
         <p id="powered-by">{{ _('Powered by %s')|format(high_res_img('firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}</p>
       </div>
       <div class="promo-media">
