--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -33,12 +33,12 @@
       <div class="message" id="dlbar-oldfx-desktop">
         {{ _('You’re using an older version of Firefox for desktop.') }}
         {{ _('Update today to stay fast and safe.') }}
-        <a class="button green" href="{{ url('firefox.new') }}?scene=2" data-link-type="download" data-download-os="Desktop">{{ _('Download') }}</a>
+        {{ download_firefox(alt_copy=_('Download'), dom_id='download-button-old-fx') }}
       </div>
       <div class="message" id="dlbar-nonfx">
         {{ _('Choose Independent.') }}
         {{ _('Choose Firefox.') }}
-        <a class="button green" href="{{ url('firefox.new') }}?scene=2" data-link-type="download" data-download-os="Desktop">{{ _('Download') }}</a>
+        {{ download_firefox(alt_copy=_('Download'), dom_id='download-button-non-fx') }}
       </div>
       <div class="message" id="dlbar-nonfx-android">
         <a rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-link-type="download" data-download-os="Android">{{ _('Get Firefox for Android') }}</a>
@@ -49,7 +49,7 @@
       {% endif %}
       </div>
 
-      <button type="button" class="btn-close button-flat" title="{{ _('Close') }}">{{ _('Close') }}</button>
+      <button type="button" class="btn-close button" title="{{ _('Close') }}">{{ _('Close') }}</button>
     </div>{#-- /.content --#}
   </div>{#-- /#conditional-download-bar --#}
   <header id="masthead">
@@ -170,6 +170,7 @@
 <footer id="footer">
   <div class="content">
     <a class="mozlogo" href="{{ url('mozorg.home') }}" data-link-type="footer" data-link-name="Mozilla">Mozilla</a>
+
     <ul>
       <li>
         <a href="{{ url('privacy') }}" data-link-type="footer" data-link-name="Privacy Policy">{{ _('Privacy Policy') }}</a>
