--- a/bedrock/firefox/templates/firefox/feedback/happy.html
+++ b/bedrock/firefox/templates/firefox/feedback/happy.html
@@ -32,7 +32,7 @@
     {% if LANG == 'en-US' and donate_stars_url %}
       <p class="copy">{{ _('Mozilla, the non-profit behind Firefox, relies on donations. Would you like to make a donation to help us carry out our mission to keep the Web open and free?') }}</p>
 
-      <p class="copy"><a href="{{ donate_stars_url }}" class="button-flat" rel="external">{{ _('Donate Now') }}</a></p>
+      <p class="copy"><a href="{{ donate_stars_url }}" class="button" rel="external">{{ _('Donate Now') }}</a></p>
     {% else %}
       <p class="copy">{{ _('Firefox is non-profit, non-corporate, non-compromised. Help protect the largest global public resource we have — the Web — by sharing Firefox with your friends.') }}</p>
     {% endif %}
