--- a/bedrock/firefox/templates/firefox/sync.html
+++ b/bedrock/firefox/templates/firefox/sync.html
@@ -137,13 +137,7 @@
           </a>
         </div>
 
-        <div class="show-fx-28-older">
-          <a href="{{ url('firefox.new') }}?scene=2" class="button green" data-interaction="button click" data-element-action="Sync CTA" id="cta-firefox">
-            {{ _('Download Firefox') }}
-          </a>
-        </div>
-
-        <div class="show-not-fx">
+        <div class="show-not-fx show-fx-28-older">
           {{ download_firefox() }}
         </div>
       </div>
