--- a/media/css/firefox/accounts.less
+++ b/media/css/firefox/accounts.less
@@ -88,11 +88,17 @@ aside {
     color: #56565a;
 }
 
-.download-firefox .download-dumb > .download-heading {
-    color: #56565a;
+.download-firefox {
+    .download-dumb > .download-heading {
+        color: #56565a;
+    }
+
+    .fx-privacy-link > a {
+        color: @linkBlue;
+    }
 }
 
-.button-flat-dark {
+.button.dark {
     .font-size(20px);
 }
 
@@ -104,7 +110,9 @@ aside {
 .mobile,
 .download-firefox,
 .non-firefox,
-.old-firefox {
+.old-firefox,
+.button.dark.firefox-ios,
+.button.dark.firefox-android, {
     display: none;
 }
 
@@ -158,7 +166,7 @@ aside {
     .mobile {
         display: block;
     }
-    .firefox-ios {
+    .button.dark.firefox-ios {
         display: inline-block;
     }
 }
@@ -167,7 +175,7 @@ aside {
     .mobile {
         display: block;
     }
-    .firefox-android {
+    .button.dark.firefox-android {
         display: inline-block;
     }
 }
@@ -275,7 +283,7 @@ aside {
     }
 
     .main-copy .tagline,
-    .button-flat-dark {
+    .button.dark {
         .font-size(18px);
     }
 }
