--- a/media/css/firefox/family/index.less
+++ b/media/css/firefox/family/index.less
@@ -87,9 +87,16 @@
         padding: 0 (@gridGutterWidth * 3) 0 @gridGutterWidth;
     }
 
-    .button {
+    .download-button {
+        vertical-align: baseline;
+        
+        .fx-privacy-link {
+            display: none;
+        }
+
         @media only screen and (max-width: @breakTablet) {
             display: block;
+            margin-top: @baseLine;
         }
     }
 
