--- a/media/css/firefox/new/redesign/scene1.less
+++ b/media/css/firefox/new/redesign/scene1.less
@@ -50,37 +50,12 @@
 }
 
 #download-buttons {
-    .download-link {
-        background: #6fbe4a;
-        box-shadow: none;
-        text-shadow: none;
-        .transition(background .1s ease-in-out);
-
-        .download-subtitle {
-            text-shadow: none;
-        }
-
-        &:hover,
-        &:focus {
-            background: darken(#6fbe4a, 3%);
-        }
-    }
-
     .download-dumb {
         text-align: center;
 
         .download-heading {
             color: #fff;
         }
-    }
-
-    /**
-     * I'm not proud of this but it avoids needing JS. These small
-     * links will be relocated from download buttons to the page
-     * footer longer term, once a new design is finalized.
-     */
-    .download-button .download-other {
-        display: none !important;
     }
 
     .download-button .unsupported-download a {
@@ -120,7 +95,7 @@ html.firefox-latest {
         display: none;
     }
 
-    #subscribe {
+    #newsletter-subscribe {
         display: block;
     }
 
@@ -538,133 +513,13 @@ html.fxos {
     }
 }
 
-#subscribe {
+#newsletter-subscribe {
     background: #11336b;
-    padding: (@baseLine * 3) 0;
     display: none;
 
-    .subscribe-container {
+    .container {
         position: relative;
         .clearfix;
-    }
-
-    .form-title {
-        .at2x('/media/img/firefox/newsletter.png', 149px, 149px);
-        .span(4);
-        background-position: left top;
-        background-repeat: no-repeat;
-        min-height: 120px;
-        padding: 30px 0 20px 180px;
-        margin-left: -((@gridColumnWidth * 7) + (@gridGutterWidth * 6));
-        margin-top: -30px;
-        text-shadow: none;
-
-        h3 {
-            .font-size(40px);
-            line-height: 1.2;
-            text-shadow: none;
-            color: #fff;
-        }
-
-        @media (max-width: @breakDesktop) {
-            .background-size(120px, 120px);
-            .span_narrow(4);
-            background-position: left 10px;
-            padding-left: 140px;
-            margin-left: -((@gridColumnWidthNarrow * 7) + (@gridGutterWidth * 6));
-            margin-top: -30px;
-
-            h3 {
-                .font-size(32px);
-            }
-        }
-
-        @media (max-width: @breakTablet) {
-            .background-size(100px, 100px);
-            .span-all;
-            background-position: center top;
-            padding-left: 0;
-            padding-top: 120px;
-            text-align: center;
-            min-height: 0;
-        }
-    }
-
-    .newsletter-form {
-        .span(5);
-        .offset(7);
-        padding: 30px 0 0;
-        background: transparent none;
-        border: 0;
-        box-shadow: none;
-
-        .form-submit,
-        .form-contents {
-            .span-all;
-        }
-
-        @media (max-width: @breakDesktop) {
-            .span_narrow(5);
-            .offset_narrow(7);
-        }
-
-        @media (max-width: @breakTablet) {
-            .span-all;
-        }
-    }
-
-    label {
-        color: #fff;
-    }
-
-    .field-format label {
-        display: inline;
-        margin-right: 20px;
-    }
-
-    input[type='email'] {
-        .border-box;
-        .border-radius(4px);
-        .box-shadow(none);
-        .font-size(@largeFontSize);
-        border: 0;
-        padding: .75em 20px;
-        width: 100%;
-    }
-
-    select {
-        .font-size(@baseFontSize);
-        font-family: inherit;
-    }
-
-    .button {
-        .border-box;
-        .border-radius(5px);
-        .box-shadow(none);
-        .font-size(@largeFontSize);
-        .transition(background-color .15s ease);
-        background: transparent;
-        border: 2px solid #fff;
-        padding: .75em 20px;
-        text-shadow: none;
-        text-transform: uppercase;
-        width: 100%;
-
-        &:hover,
-        &:focus {
-            background: #33aae4;
-            background: rgba(255, 255, 255, .1);
-        }
-    }
-
-    a {
-        color: #fff;
-        text-decoration: underline;
-    }
-
-    #footer-email-errors {
-        .span-all;
-        margin-bottom: @baseLine;
     }
 
     #newsletter-form-thankyou {
