--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -2,349 +2,300 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import './lib.less';
+@import "../sandstone/lib.less";
 
-// General buttons
+@light: #fff;
+@lightHover: #f4f4f4;
 
-@buttonFlatBlue: #00a0dc;
-@buttonFlatDarkBlue: #005189;
-@buttonFlatGreen: #6fbe4a;
+@mozGreen: #4caf50;
+@mozGreenHover: #66bb6a;
+@mozGreenBorder: #4aa84a;
 
-.button-flat,
-.button-flat:link,
-.button-flat:visited {
-    .inline-block();
-    .border-radius(6px);
-    .transition();
-    .open-sans();
-    text-align: center;
-    padding: 12px (@baseLine * 2);
-    margin-bottom: @baseLine;
-    background: @buttonFlatBlue;
-    color: #fff !important;
-    .font-size(@baseFontSize);
-    border: none;
-    cursor: pointer;
+@mozBlue: #0095dd;
+@mozBlueHover: #33aae4;
+@mozBlueBorder: #0092cc;
 
-    &:hover,
-    &:focus {
-        text-decoration: none;
-        background: lighten(@buttonFlatBlue, 3%);
-        color: #fff;
-    }
-}
+@mozDark: #00539F;
+@mozDarkHover: #0060a8;
+@mozDarkBorder: #005493;
 
-.button-flat-dark {
-    .button-flat;
-    background: @buttonFlatDarkBlue;
+@mozRed: #C13832;
+@mozRedHover: #EA3B28;
+@mozRedBorder: #C13832;
 
-    &:hover,
-    &:focus {
-        background: lighten(@buttonFlatDarkBlue, 3%);
-    }
-}
+@mozOrange: #db8700;
+@mozOrangeHover: #ffbe57;
+@mozOrangeBorder: #db8700;
 
-.button-flat-green {
-    .button-flat;
-    background: @buttonFlatGreen;
-
-    &:hover,
-    &:focus {
-        background: lighten(@buttonFlatGreen, 3%);
-    }
-}
-
-.button-flat-inverted {
-    .button-flat;
-    background: rgba(255, 255, 255, 0.4);
-    color: @buttonFlatBlue;
-    border: 2px solid @buttonFlatBlue;
-
-    &:hover,
-    &:focus {
-        background: rgba(255, 255, 255, 1);
-    }
-}
-
-html[lang^='en'] {
-    .button-flat,
-    .button-flat-dark,
-    .button-flat-green,
-    .button-flat-inverted {
-        text-transform: uppercase;
-    }
-}
-
-.button,
-.button:link,
-.button:visited {
+/* the basis for all buttons on bedrock */
+.base-button {
+    position: relative;
     .inline-block;
-    .border-radius;
-    box-shadow: @buttonShadow;
-    background-color: @buttonBlue;
-    #gradient > .vertical(@buttonBlue, @buttonBlueDark);
-    color: @buttonTextColor;
+    background: none;
+    padding: (@baseLine / 2) 36px;
+    border-radius: 4px;
+    .font-size(20px);
     text-align: center;
-    .font-size(@baseFontSize);
-    font-weight: bold;
-    padding: (@baseLine / 4) (@baseLine / 2);
-    line-height: 1.1;
-    text-decoration: none;
-    min-width: 80px;
-    border: 0;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
-    .open-sans;
-    .transition();
-
-    &:hover,
-    &.hover,
-    &:focus,
-    &.focus {
-        .box-shadow(@buttonShadowHover);
-        color: @buttonTextColor;
-        text-decoration: none;
-        .transition();
-    }
-
-    &:focus,
-    &.focus {
-        outline-color: @textColorSecondary;
-        .box-shadow(@buttonShadowFocus);
-    }
-
-    &:active,
-    &.active {
-        .box-shadow(@buttonShadowActive);
-        color: @buttonTextColor;
-        text-decoration: none;
-        .transition();
-    }
-
-    &.insensitive,
-    &.insensitive:hover,
-    &.insensitive:focus {
-        background-color: #9ca3aa;
-        #gradient > .vertical(#bfc7cd, #9ca3aa);
-        .box-shadow(@buttonShadow);
-        color: #eee;
-    }
-}
-
-.button-green,
-.button-green:link,
-.button-green:visited {
-    .button;
-    background-color: @buttonGreen;
-    #gradient > .vertical(@buttonGreen, @buttonGreenDark);
-
-    &:hover {
-        .button-hover-box-shadow(@buttonGreen);
-    }
-
-    &:focus {
-        .button-focus-box-shadow(@buttonGreen);
-    }
-}
-
-.button-negative,
-.button-negative:link,
-.button-negative:visited {
-    .button;
-    background-color: #a91300;
-    #gradient > .vertical(#da5132, #a91300);
-
-    &:hover {
-        .button-hover-box-shadow(#da5132);
-    }
-
-    &:focus {
-        .button-focus-box-shadow(#da5132);
-    }
-}
-
-.button-white,
-.button-white:link,
-.button-white:visited {
-    .button;
-    border: 1px solid #d0d0d0;
-    background: #fff;
-    padding: (@baseLine / 5) @baseFontSize * 0.75;
-    color: @textColorSecondary;
-    .font-size(@baseFontSize * 0.75);
-    font-weight: normal;
-    text-shadow: none;
-    @shadow: 0 0 12px rgba(230,230,230,0.2) inset, 0 -2px #e8e8e8 inset;
-    .box-shadow(@shadow);
-    .border-radius(6px);
-    filter: ~"progid:DXImageTransform.Microsoft.gradient(enabled=false)";
-
-    &:hover,
-    &:focus {
-        color: @textColorSecondary;
-        .box-shadow(@shadow);
-    }
-}
-
-.button-white.selected {
-    background: #d7d5d5;
-    border-color: #bcb9b9;
-    text-shadow: 0 1px #fff;
-    @shadow: 0 1px 1px rgba(255,255,255,0.75), 0 1px 3px rgba(0,0,0,0.1) inset;
-    .box-shadow(@shadow);
-}
-
-.button,
-.button-white {
     cursor: pointer;
-    small {
-        display: block;
+    text-shadow: none;
+    .transition(background-color .1s ease-in-out);
+
+    @media only screen and (max-width: @breakMobileLandscape) {
+        .font-size(18px);
     }
 
-}
+    &:active {
+        position: relative;
+        top: 1px;
+    }
 
-.button.arrow span,
-.button-blue.arrow span,
-.button-white.arrow span {
-  display: block;
-  margin-right: -12px;
-  padding: 0 30px 0 0;
-  background: url(/media/img/sandstone/buttons/arrow-go-r.png) right center no-repeat;
-}
-
-.button-sand,
-.button-sand:link,
-.button-sand:visited {
-    .button;
-    #gradient > .vertical(rgba(255,255,255,0.1), rgba(0,0,0,0.1));
-    background-color: transparent;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.4) rgba(0,0,0,0.1);
-    @shadow:  0    1px 0 0 rgba(255,255,255,0.5) inset,
-              1px  0   0 0 rgba(255,255,255,0.5) inset,
-             -1px  0   0 0 rgba(255,255,255,0.5) inset,
-              0   -2px 0 0 rgba(0,0,0,0.1)       inset;
-    .box-shadow(@shadow);
-    color: @linkBlue;
-    text-shadow: none;
     &:hover,
     &:focus {
-        .button-hover-box-shadow();
-        color: @linkBlueHover;
+        text-decoration: none;
     }
 }
 
-.button-list {
-    margin-left: 0;
-    margin-right: 0;
-    padding: 0;
-    // Font size set to 0 on UL and reset to body size on the LI tags
-    // This avoids putting a horizontal space between inline-block links
-    .font-size(0);
-    li {
-        .font-size(@baseFontSize);
-        margin: 0;
-        padding: 0;
-        list-style-style: none;
-        .inline-block;
-        .button-sand {
-            border-radius: 0;
-            border-left-width: 0;
-            @shadow:  0    1px 0 0 rgba(255,255,255,0.5) inset,
-                     -1px  0   0 0 rgba(255,255,255,0.5) inset,
-                      0   -2px 0 0 rgba(0,0,0,0.1)       inset;
-            .box-shadow(@shadow);
-            min-width: 0;
-        }
-        &:first-child {
-            .button-sand {
-                border-top-left-radius: 0.25em;
-                border-bottom-left-radius: 0.25em;
-                border-left-width: 1px;
-                @shadow:  0    1px 0 0 rgba(255,255,255,0.5) inset,
-                          1px  0   0 0 rgba(255,255,255,0.5) inset,
-                         -1px  0   0 0 rgba(255,255,255,0.5) inset,
-                          0   -2px 0 0 rgba(0,0,0,0.1)       inset;
-                .box-shadow(@shadow);
-                &:hover,
-                &:focus {
-                    .button-hover-box-shadow();
-                }
-            }
-        }
-        &:last-child {
-            .button-sand {
-                border-top-right-radius: 0.25em;
-                border-bottom-right-radius: 0.25em;
-            }
-        }
-    }
-}
+/* buttons used for forms or where a button element makes semantic sense */
+input[type="submit"].form-button,
+button.form-button {
+    .base-button;
+    color: @mozBlue;
+    border: 2px solid @mozBlue;
+    width: 100%;
 
-.dark {
-    .button-sand,
-    .button-sand:link,
-    .button-sand:visited {
-        @shadow:  0    1px 0 0 rgba(255,255,255,0.2) inset,
-                  1px  0   0 0 rgba(255,255,255,0.2) inset,
-                 -1px  0   0 0 rgba(255,255,255,0.2) inset,
-                  0   -2px 0 0 rgba(0,0,0,0.1)       inset;
-        .box-shadow(@shadow);
+    &:hover,
+    &:focus {
+        color: @mozBlueHover;
+        border-color: @mozBlueHover;
+    }
+
+    &.dark {
+        color: @mozDark;
+        border-color: @mozDark;
+
         &:hover,
         &:focus {
-            .button-hover-box-shadow(rgba(255,255,255,0.2));
-            color: @linkBlue;
+            color: @mozDarkHover;
+            border-color: @mozDarkHover;
         }
     }
-    .button-list {
-        li {
-            .button-sand {
-                @shadow:  0    1px 0 0 rgba(255,255,255,0.2) inset,
-                         -1px  0   0 0 rgba(255,255,255,0.2) inset,
-                          0   -2px 0 0 rgba(0,0,0,0.1)       inset;
-                .box-shadow(@shadow);
-            }
-            &:first-child {
-                .button-sand {
-                    @shadow:  0    1px 0 0 rgba(255,255,255,0.2) inset,
-                              1px  0   0 0 rgba(255,255,255,0.2) inset,
-                             -1px  0   0 0 rgba(255,255,255,0.2) inset,
-                              0   -2px 0 0 rgba(0,0,0,0.1)       inset;
-                    .box-shadow(@shadow);
-                    &:hover,
-                    &:focus {
-                        .button-hover-box-shadow(rgba(255,255,255,0.2));
-                        color: @linkBlue;
-                    }
-                }
-            }
+
+    &.light {
+        color: @light;
+        border-color: @light;
+
+        &:hover,
+        &:focus {
+            color: @lightHover;
+            border-color: @lightHover;
+        }
+    }
+
+    &.general {
+        .font-size(@largeFontSize);
+    }
+}
+
+/* All buttons not in a form context such as CTA and download buttons */
+.button,
+button.button,
+.blueprint .button,
+a.button:link,
+a.button:visited {
+    .base-button;
+    background-color: @mozBlue;
+    color: @light;
+    border: 2px solid @mozBlueBorder;
+
+    &:hover,
+    &:focus {
+        background-color: @mozBlueHover;
+        color: @light;
+    }
+
+    &.dark {
+        background-color: @mozDark;
+        color: @light;
+        border-color: @mozDarkBorder;
+
+        &:hover,
+        &:focus {
+            background-color: @mozDarkHover;
+        }
+    }
+
+    &.green {
+        background-color: @mozGreen;
+        color: @light;
+        border: 2px solid @mozGreenBorder;
+
+        &:hover,
+        &:focus {
+            background-color: @mozGreenHover;
+        }
+    }
+
+    &.red {
+        background-color: @mozRed;
+        color: @light;
+        border: 2px solid @mozRedBorder;
+
+        &:hover,
+        &:focus {
+            background-color: @mozRedHover;
+        }
+    }
+
+    &.orange {
+        background-color: @mozOrange;
+        color: @light;
+        border: 2px solid @mozOrangeBorder;
+
+        &:hover,
+        &:focus {
+            background-color: @mozOrangeHover;
+        }
+    }
+
+    &.transparent-light {
+        background-color: transparent;
+        color: @light;
+        border: 2px solid @light;
+
+        &:hover,
+        &:focus {
+            border-color: @lightHover;
         }
     }
 }
 
-// Product download buttons
+/* privacy policy link that accompany most download buttons */
+.fx-privacy-link {
+    display: block;
+    .font-size(@largeFontSize);
+    text-align: center;
+    text-shadow: none;
 
-.download-button .ios-download,
-.download-button .linux-arm-download,
-.download-button .unrecognized-download,
-.download-button .unsupported-download {
-    display: none;
+    a:link,
+    a:visited {
+        color: @light;
+    }
+
+    a:hover,
+    a:focus {
+        text-decoration: underline;
+    }
+}
+
+.sand .fx-privacy-link {
+    a:link,
+    a:visited {
+        color: @linkBlue;
+    }
+}
+
+.sky .fx-privacy-link {
+    a:link,
+    a:visited {
+        color: @linkSkyBlue;
+    }
+}
+
+.space .fx-privacy-link {
+    a:link,
+    a:visited {
+        color: @linkSpacePurple;
+    }
+}
+
+.blueprint .fx-privacy-link {
+    a:link,
+    a:visited {
+        color: @linkSpaceBlue;
+    }
+}
+
+/* fxfamilynav overrides */
+.fxfamilynav-cta-wrapper {
+    .button,
+    a.button:link,
+    a.button:visited {
+        padding: 10px 18px;
+        .font-size(@baseFontSize);
+    }
+}
+
+/* download button and related containers specific */
+ul.download-list {
+    list-style-type: none;
+    margin-bottom: 10px;
+
+    li {
+        margin-left: 0;
+    }
+
+    strong {
+        font-weight: normal;
+    }
+}
+
+.infobar {
+    a.button {
+        margin-left: @baseLine;
+        padding: 5px 18px;
+        .font-size(@largeFontSize);
+    }
+}
+
+.download-dumb {
+    ul {
+        list-style: none;
+
+        li {
+            display: inline-block;
+            margin: @baseLine 0 0;
+
+            .button {
+                padding: 6px;
+                margin-left: 3px;
+                .font-size(14px);
+            }
+        }
+    }
 }
 
 .download-button {
-    .inline-block;
+    display: inline-block;
     vertical-align: top;
-    ul {
-        margin: 0;
-        li {
-            list-style-type: none;
-            margin: 0;
-        }
+}
+
+.download-other {
+    color: @textColorLight;
+    .font-size(11px);
+
+    a:link,
+    a:visited {
+        color: #999;
+    }
+
+    a:hover,
+    a:focus,
+    a:active {
+        color: #999;
+        text-decoration: underline;
     }
 }
 
-// OS detection
+/* Product download buttons */
+.download-button .ios-download,
+.download-button .linux-arm-download,
+.download-button .unrecognized-download,
+.download-button .unsupported-download,
+.download-button .nojs-download {
+    display: none;
+}
 
+/* OS detection */
 .download-button .os_win64,
 .download-button .os_linux,
 .download-button .os_linux64,
@@ -377,7 +328,6 @@ html[lang^='en'] {
 .ios .download-button .os_ios,
 .ios .download-button .ios-download,
 .ios .download-button-desktop .download-list,
-.no-js .download-button-android .download-list,
 .other .download-button-android .download-list,
 .other .download-button small.os_win {
     display: block !important;
@@ -391,52 +341,29 @@ html[lang^='en'] {
     max-width: 250px;
 }
 
-.other .download-button,
+// Hide the privacy link if platform is unsupported.
+.windows.arm .download-button .fx-privacy-link,
+.linux.arm .download-button .fx-privacy-link,
+.oldwin .download-button .fx-privacy-link,
+.oldmac .download-button .fx-privacy-link {
+    display: none;
+}
+
 .android .download-button-desktop,
 .ios .download-button-desktop,
 .no-js .download-button {
+    .nojs-download {
+        display: block;
+    }
+}
+
+.other .download-button {
     .unrecognized-download {
         display: block;
     }
 }
 
-.download-button .download-dumb {
-    text-align: left;
-    .download-heading {
-        color: #fff;
-        margin: 0 0 6px 0;
-        .open-sans-light();
-        .font-size(18px);
-        font-weight: 300;
-        letter-spacing: -0.035em;
-        text-shadow: none;
-    }
-    ul li {
-        display: inline;
-    }
-
-    small {
-        .font-size(11px);
-        letter-spacing: normal;
-    }
-    .button-green {
-        padding-left: 6px;
-        padding-right: 6px;
-        margin-left: 3px;
-        margin-bottom: 3px;
-    }
-
-}
-
-// ios tweaks
-
-.ios-download a:before {
-    content: '\A';
-    white-space: pre;
-}
-
-// Android architecture detection
-
+/* Android architecture detection */
 .download-button .download-list .os_android.api-9,
 .download-button .download-list .os_android.x86,
 .download-button .download-other.os_android .api-15,
@@ -455,4 +382,11 @@ html[lang^='en'] {
 .android.gingerbread .download-button .download-other.os_android .api-15,
 .android.x86 .download-button .download-other.os_android .armv7up {
     display: inline !important;
+}
+
+/* l10n download button tweaks */
+html[lang="ml"] {
+    .button {
+        padding: 10px 16px;
+    }
 }
