--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -1,7 +1,7 @@
 @import "lib.less";
 @import "reset.less";
 @import "fonts.less";
-@import "buttons-new.less";
+@import "buttons.less";
 @import "animations.less";
 
 /* {{{ Basic Colors, Text, Links */
@@ -894,7 +894,6 @@ nav.menu-bar {
 
     input[type=email] {
         width: 80%;
-        height: @baseLine;
         padding: 15px 10px;
     }
 
